<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>kr.cloud</groupId>
	<artifactId>ProjectTFIC</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ProjectTFIC</name>
	<description>Demo project for Spring Boot</description>

	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
	
		<!-- [ jasper 라이브러리 추가 ] -->
		<dependency>
         	<groupId>org.apache.tomcat.embed</groupId>
         	<artifactId>tomcat-embed-jasper</artifactId>
       	</dependency>
       	
       	<dependency>
      	   	<groupId>org.glassfish.web</groupId>
      	   	<artifactId>jakarta.servlet.jsp.jstl</artifactId>
   	   	</dependency> 
   	   	        
       	<dependency>
           	<groupId>jakarta.servlet.jsp</groupId>
           	<artifactId>jakarta.servlet.jsp-api</artifactId>
           	<version>3.1.0</version>
           	<scope>provided</scope>
        </dependency>
        
        <dependency>
           	<groupId>jakarta.el</groupId>
           	<artifactId>jakarta.el-api</artifactId>
			<version>5.0.0</version>
        </dependency>
        
        <dependency>
           	<groupId>jakarta.servlet.jsp.jstl</groupId>
           	<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
        </dependency>

		
		<!-- [ MyBatis 라이브러리 ] -->
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>3.0.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter-test</artifactId>
			<version>3.0.4</version>
			<scope>test</scope>
		</dependency>
	
	
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		
		
		<!-- [ 웹캠 라이브러리 ] -->
		<dependency>
		    <groupId>com.github.sarxos</groupId>
		    <artifactId>webcam-capture</artifactId>
		    <version>0.3.12</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		
		<!-- [ 클라우드 서버 - 스프링부트 모니터링 ] -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>		
		<!-- [ pdf생성 ] -->
		<dependency>
    		<groupId>com.itextpdf</groupId>
    		<artifactId>itextpdf</artifactId>
    		<version>5.5.13.3</version>
		</dependency>
		
		<!-- 
		[ Spring Boot Hot Swap ]
		Spring Boot 에서 코드 변경 시, 자동으로 어플리케이션 재시작됨
		-->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-devtools</artifactId>
		    <optional>true</optional>
		</dependency>

		<!-- 
		<dependency>
			<groupId>kr.cloud</groupId>
			<artifactId>SpringBoot1</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		-->

		<dependency>
    		<groupId>com.amazonaws</groupId>
    		<artifactId>aws-java-sdk-s3</artifactId>
    		<version>1.11.238</version>
		</dependency>
		<dependency>
    		<groupId>javax.xml.bind</groupId>
    		<artifactId>jaxb-api</artifactId>
    		<version>2.3.1</version>
		</dependency>
		<dependency>
    		<groupId>org.glassfish.jaxb</groupId>
    		<artifactId>jaxb-runtime</artifactId>
    		<version>2.3.1</version>
		</dependency>

		
	</dependencies>
	
	
	

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	

</project>
